# generated/api/oas_operations_gen.go
@@ -16,6 +16,7 @@ const (
 	CreateUnitOperation                OperationName = "CreateUnit"
 	DeleteCellOperation                OperationName = "DeleteCell"
 	DeleteCellsGroupOperation          OperationName = "DeleteCellsGroup"
+	DeleteEmployeeByIdOperation        OperationName = "DeleteEmployeeById"
 	DeleteInstanceByIdOperation        OperationName = "DeleteInstanceById"
 	DeleteItemOperation                OperationName = "DeleteItem"
 	DeleteOrganizationOperation        OperationName = "DeleteOrganization"
@@ -28,6 +29,8 @@ const (
 	GetCellsGroupByIdOperation         OperationName = "GetCellsGroupById"
 	GetCellsGroupsOperation            OperationName = "GetCellsGroups"
 	GetCurrentUserOperation            OperationName = "GetCurrentUser"
+	GetEmployeeByIdOperation           OperationName = "GetEmployeeById"
+	GetEmployeesOperation              OperationName = "GetEmployees"
 	GetInstancesOperation              OperationName = "GetInstances"
 	GetInstancesByItemIdOperation      OperationName = "GetInstancesByItemId"
 	GetItemByIdOperation               OperationName = "GetItemById"
@@ -36,12 +39,15 @@ const (
 	GetOrganizationUnitByIdOperation   OperationName = "GetOrganizationUnitById"
 	GetOrganizationUnitsOperation      OperationName = "GetOrganizationUnits"
 	GetOrganizationsOperation          OperationName = "GetOrganizations"
+	GetRolesOperation                  OperationName = "GetRoles"
 	GetStorageGroupByIdOperation       OperationName = "GetStorageGroupById"
 	GetStorageGroupsOperation          OperationName = "GetStorageGroups"
+	InviteEmployeeOperation            OperationName = "InviteEmployee"
 	LogoutOperation                    OperationName = "Logout"
 	PatchCellOperation                 OperationName = "PatchCell"
 	PatchCellsGroupOperation           OperationName = "PatchCellsGroup"
 	PatchCurrentUserOperation          OperationName = "PatchCurrentUser"
+	PatchEmployeeByIdOperation         OperationName = "PatchEmployeeById"
 	PatchItemOperation                 OperationName = "PatchItem"
 	PatchOrganizationOperation         OperationName = "PatchOrganization"
 	PatchOrganizationUnitOperation     OperationName = "PatchOrganizationUnit"
